--- a/src/screens/Play/Play.scss
+++ b/src/screens/Play/Play.scss
@@ -72,6 +72,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  transform-origin: top right;
 
   position: absolute;
   right: 10px;
@@ -82,6 +83,15 @@
   background-color: black;
   border-radius: 6px;
   text-align: center;
+  transition: transform 0.5s ease-in;
+
+  #player-face {
+    position: absolute;
+    top: -10px;
+    right: 70px;
+    width: 70px;
+    height: 70px;
+  }
 
   span { font-size: 20px }
 }
